--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <nav>
+        <div class="container header-box">
+            <nav class="nav-box">
                 <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
-                <ul class="list">
+                <ul class="list nav-box-list">
                     <li><a class="list-item link" href="./index.html">Studio</a></li>
                     <li><a class="list-item link" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="list-item link" href="">Contacts</a></li>
                 </ul>
             </nav>
-            <address class="address">
-                <ul class="list">
+            <address class="address address-box">
+                <ul class="list address-box-list">
                     <li><a class="contacts-list-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="contacts-list-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
@@ -37,37 +37,37 @@
     </header>
     <main>
         <section class="hero-section">
-            <div class="container">
-                <h1 class="hero-heading">Effective Solutions for Your Business</h1>
-                <button type="button" class="order-service-button">Order Service</button>
+            <div class="container hero-container">
+                <h1 class="hero-heading hero-heading-box">Effective Solutions for Your Business</h1>
+                <button type="button" class="order-service-button hero-button-box">Order Service</button>
             </div>
         </section>
         <section>
-            <div class="container">
-                <h2 class="hidden-title" hidden>Our features</h2>
-                <ul class="list">
-                    <li>
+            <div class="container features-box section">
+                <h2 class="visually-hidden">Our features</h2>
+                <ul class="list features-list-box">
+                    <li class="features-list-item">
                         <h3 class="features-list-item-heading">Strategy</h3>
                         <p class="features-list-item-description">
                             Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-list-item">
                         <h3 class="features-list-item-heading">Punctuality</h3>
                         <p class="features-list-item-description">
                             Bring the key message to the brand's audience for the best
                             price within the shortest possible time.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-list-item">
                         <h3 class="features-list-item-heading">Diligence</h3>
                         <p class="features-list-item-description">
                             Research and confirm brands that present the strongest digital
                             growth opportunities and minimize risk.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-list-item">
                         <h3 class="features-list-item-heading">Technologies</h3>
                         <p class="features-list-item-description">
                             Design practice focused on digital experiences. We bring forth
@@ -78,9 +78,9 @@
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container section products-box">
                 <h2 class="products-heading">What are we doing</h2>
-                <ul class="list">
+                <ul class="list products-list-box">
                     <li>
                         <img src="./images/img-1.jpg" alt="for computer" width="360" height="300">
                     </li>
@@ -93,26 +93,26 @@
                 </ul>
             </div>
         </section>
-        <section>
-            <div class="container">
+        <section class="team-section">
+            <div class="container section">
                 <h2 class="team-heading">Our Team</h2>
-                <ul class="list">
-                    <li>
+                <ul class="list team-list-box">
+                    <li class="team-list-item-box">
                         <img src="./images/photo-1.jpg" alt="Mark Guerrero Product Designer" width="264" height="260">
                         <h3 class="team-list-item-heading">Mark Guerrero</h3>
                         <p class="team-list-item-description">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="team-list-item-box">
                         <img src="./images/photo-2.jpg" alt="Tom Ford Frontend Developer" width="264" height="260">
                         <h3 class="team-list-item-heading">Tom Ford</h3>
                         <p class="team-list-item-description">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="team-list-item-box">
                         <img src="./images/photo-3.jpg" alt="Camila Garcia Marketing" width="264" height="260">
                         <h3 class="team-list-item-heading">Camila Garcia</h3>
                         <p class="team-list-item-description">Marketing</p>
                     </li>
-                    <li>
+                    <li class="team-list-item-box">
                         <img src="./images/photo-4.jpg" alt="Daniel Wilson UI Designer" width="264" height="260">
                         <h3 class="team-list-item-heading">Daniel Wilson</h3>
                         <p class="team-list-item-description">UI Designer</p>
@@ -122,7 +122,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-box">
             <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
             <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing
                 & growth solutions.
