--- a/portfolio.html
+++ b/portfolio.html
@@ -18,104 +18,130 @@
 
 <body>
     <header>
-        <nav>
-           <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
-           <ul class="list">
-            <li><a class="list-item link" href="./index.html">Studio</a></li>
-            <li><a class="list-item link" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="list-item link" href="">Contacts</a></li>
-           </ul>
-        </nav>
-        <address>
-            <ul class="list">
-                <li><a class="contacts-list-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contacts-list-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="container header-box">
+            <nav class="nav-box">
+                <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
+                <ul class="list nav-box-list">
+                    <li><a class="list-item link" href="./index.html">Studio</a></li>
+                    <li><a class="list-item link" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="list-item link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="address address-box">
+                <ul class="list address-box-list">
+                    <li><a class="contacts-list-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="contacts-list-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <section>
-            <h1 hidden>Portfolio</h1>
-            <ul class="list">
-                <li>
-                    <button type="button" class="filter-button">All</button>
-                </li>
-                <li>
-                    <button type="button" class="filter-button">Web Site</button>
-                </li>
-                <li>
-                    <button type="button" class="filter-button">App</button>
-                </li>
-                <li>
-                    <button type="button" class="filter-button">Design</button>
-                </li>
-                <li>
-                    <button type="button" class="filter-button">Marketing</button>
-                </li>
-            </ul>
-            <ul class="list">
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-1-1.jpg" alt="BankingcApp" width="360" height="300">
-                        <h2 class="filter-item-heading">Banking App Interface Concept</h2>
-                        <p class="filter-list-item-description">App</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-1-2.jpg" alt="Marketing" width="360" height="300">
-                        <h2 class="filter-item-heading">Cashless Payment</h2>
-                        <p class="filter-list-item-description">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-1-3.jpg" alt="Meditaion App" width="360" height="300">
-                        <h2 class="filter-item-heading">Meditation App</h2>
-                        <p class="filter-list-item-description">App</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-2-1.jpg" alt="Taxi Service" width="360" height="300">
-                        <h2 class="filter-item-heading">Taxi Service</h2>
-                        <p class="filter-list-item-description">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-2-2.jpg" alt="Screen Illustrations" width="360" height="300">
-                        <h2 class="filter-item-heading">Screen Illustrations</h2>
-                        <p class="filter-list-item-description">Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-2-3.jpg" alt="Online Courses" width="360" height="300">
-                        <h2 class="filter-item-heading">Online Courses</h2>
-                        <p class="filter-list-item-description">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-3-1.jpg" alt="Instagram Stories Concept" width="360" height="300">
-                        <h2 class="filter-item-heading">Instagram Stories Concept</h2>
-                        <p class="filter-list-item-description">Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-3-2.jpg" alt="Organic Food" width="360" height="300">
-                        <h2 class="filter-item-heading">Organic Food</h2>
-                        <p class="filter-list-item-description">Web Site</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link"><img src="./images/portfolio-3-3.jpg" alt="Fresh Coffee" width="360" height="300">
-                        <h2 class="filter-item-heading">Fresh Coffee</h2>
-                        <p class="filter-list-item-description">Web Site</p>
-                    </a>
-                </li>
-            </ul>
+            <div class="container section">
+                <h1 class="visually-hidden">Portfolio</h1>
+                <ul class="list buttons-box">
+                    <li>
+                        <button type="button" class="filter-button">All</button>
+                    </li>
+                    <li>
+                        <button type="button" class="filter-button">Web Site</button>
+                    </li>
+                    <li>
+                        <button type="button" class="filter-button">App</button>
+                    </li>
+                    <li>
+                        <button type="button" class="filter-button">Design</button>
+                    </li>
+                    <li>
+                        <button type="button" class="filter-button">Marketing</button>
+                    </li>
+                </ul>
+                <ul class="list filters-box">
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-1-1.jpg" alt="BankingcApp" width="360" height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Banking App Interface Concept</h2>
+                                <p class="filter-list-item-description">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-1-2.jpg" alt="Marketing" width="360" height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Cashless Payment</h2>
+                                <p class="filter-list-item-description">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-1-3.jpg" alt="Meditaion App" width="360" height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Meditation App</h2>
+                                <p class="filter-list-item-description">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-2-1.jpg" alt="Taxi Service" width="360" height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Taxi Service</h2>
+                                <p class="filter-list-item-description">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-2-2.jpg" alt="Screen Illustrations" width="360"
+                                height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Screen Illustrations</h2>
+                                <p class="filter-list-item-description">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-2-3.jpg" alt="Online Courses" width="360" height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Online Courses</h2>
+                                <p class="filter-list-item-description">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-3-1.jpg" alt="Instagram Stories Concept" width="360"
+                                height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Instagram Stories Concept</h2>
+                                <p class="filter-list-item-description">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-3-2.jpg" alt="Organic Food" width="360" height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Organic Food</h2>
+                                <p class="filter-list-item-description">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="filter-item">
+                        <a href="" class="link"><img src="./images/portfolio-3-3.jpg" alt="Fresh Coffee" width="360" height="300">
+                            <div class="item-text">
+                                <h2 class="filter-item-heading">Fresh Coffee</h2>
+                                <p class="filter-list-item-description">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
-        <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing
-            & growth solutions.
-        </p>
+        <div class="container footer-box">
+            <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
+            <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing
+                & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 
