--- a/index.html
+++ b/index.html
@@ -47,29 +47,29 @@
                 <h2 class="visually-hidden">Our features</h2>
                 <ul class="list features-list-box">
                     <li class="features-list-item">
-                        <h3 class="features-list-item-heading">Strategy</h3>
+                        <h3 class="features-item-heading">Strategy</h3>
                         <p class="features-list-item-description">
                             Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
                     <li class="features-list-item">
-                        <h3 class="features-list-item-heading">Punctuality</h3>
-                        <p class="features-list-item-description">
+                        <h3 class="features-item-heading">Punctuality</h3>
+                        <p class="features-item-description">
                             Bring the key message to the brand's audience for the best
                             price within the shortest possible time.
                         </p>
                     </li>
                     <li class="features-list-item">
-                        <h3 class="features-list-item-heading">Diligence</h3>
-                        <p class="features-list-item-description">
+                        <h3 class="features-item-heading">Diligence</h3>
+                        <p class="features-item-description">
                             Research and confirm brands that present the strongest digital
                             growth opportunities and minimize risk.
                         </p>
                     </li>
                     <li class="features-list-item">
-                        <h3 class="features-list-item-heading">Technologies</h3>
-                        <p class="features-list-item-description">
+                        <h3 class="features-item-heading">Technologies</h3>
+                        <p class="features-item-description">
                             Design practice focused on digital experiences. We bring forth
                             a deep passion for problem-solving.
                         </p>
@@ -97,25 +97,33 @@
             <div class="container section">
                 <h2 class="team-heading">Our Team</h2>
                 <ul class="list team-list-box">
-                    <li class="team-list-item-box">
+                    <li class="team-item-box">
                         <img src="./images/photo-1.jpg" alt="Mark Guerrero Product Designer" width="264" height="260">
-                        <h3 class="team-list-item-heading">Mark Guerrero</h3>
-                        <p class="team-list-item-description">Product Designer</p>
+                        <div class="team-position">
+                            <h3 class="team-item-heading">Mark Guerrero</h3>
+                            <p class="team-item-description">Product Designer</p>
+                        </div>
                     </li>
-                    <li class="team-list-item-box">
+                    <li class="team-item-box">
                         <img src="./images/photo-2.jpg" alt="Tom Ford Frontend Developer" width="264" height="260">
-                        <h3 class="team-list-item-heading">Tom Ford</h3>
-                        <p class="team-list-item-description">Frontend Developer</p>
+                        <div class="team-position">
+                            <h3 class="team-item-heading">Tom Ford</h3>
+                            <p class="team-item-description">Frontend Developer</p>
+                        </div>
                     </li>
-                    <li class="team-list-item-box">
+                    <li class="team-item-box">
                         <img src="./images/photo-3.jpg" alt="Camila Garcia Marketing" width="264" height="260">
-                        <h3 class="team-list-item-heading">Camila Garcia</h3>
-                        <p class="team-list-item-description">Marketing</p>
+                        <div class="team-position">
+                            <h3 class="team-item-heading">Camila Garcia</h3>
+                            <p class="team-item-description">Marketing</p>
+                        </div>
                     </li>
-                    <li class="team-list-item-box">
+                    <li class="team-item-box">
                         <img src="./images/photo-4.jpg" alt="Daniel Wilson UI Designer" width="264" height="260">
-                        <h3 class="team-list-item-heading">Daniel Wilson</h3>
-                        <p class="team-list-item-description">UI Designer</p>
+                        <div class="team-position">
+                            <h3 class="team-item-heading">Daniel Wilson</h3>
+                            <p class="team-item-description">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -123,10 +131,12 @@
     </main>
     <footer class="footer">
         <div class="container footer-box">
-            <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
-            <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing
-                & growth solutions.
-            </p>
+            <div class="footer-info">
+                <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
+                <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing
+                    & growth solutions.
+                </p>
+            </div>
         </div>
     </footer>
 </body>
