--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <section>
-            <div class="container section">
+            <div class="container portfolio">
                 <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="list buttons-box">
                     <li>
@@ -61,7 +61,7 @@
                         <a href="" class="link"><img src="./images/portfolio-1-1.jpg" alt="BankingcApp" width="360" height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Banking App Interface Concept</h2>
-                                <p class="filter-list-item-description">App</p>
+                                <p class="filter-item-description">App</p>
                             </div>
                         </a>
                     </li>
@@ -69,7 +69,7 @@
                         <a href="" class="link"><img src="./images/portfolio-1-2.jpg" alt="Marketing" width="360" height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Cashless Payment</h2>
-                                <p class="filter-list-item-description">Marketing</p>
+                                <p class="filter-item-description">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -77,7 +77,7 @@
                         <a href="" class="link"><img src="./images/portfolio-1-3.jpg" alt="Meditaion App" width="360" height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Meditation App</h2>
-                                <p class="filter-list-item-description">App</p>
+                                <p class="filter-item-description">App</p>
                             </div>
                         </a>
                     </li>
@@ -85,7 +85,7 @@
                         <a href="" class="link"><img src="./images/portfolio-2-1.jpg" alt="Taxi Service" width="360" height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Taxi Service</h2>
-                                <p class="filter-list-item-description">Marketing</p>
+                                <p class="filter-item-description">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -94,7 +94,7 @@
                                 height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Screen Illustrations</h2>
-                                <p class="filter-list-item-description">Design</p>
+                                <p class="filter-item-description">Design</p>
                             </div>
                         </a>
                     </li>
@@ -102,7 +102,7 @@
                         <a href="" class="link"><img src="./images/portfolio-2-3.jpg" alt="Online Courses" width="360" height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Online Courses</h2>
-                                <p class="filter-list-item-description">Marketing</p>
+                                <p class="filter-item-description">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -111,7 +111,7 @@
                                 height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Instagram Stories Concept</h2>
-                                <p class="filter-list-item-description">Design</p>
+                                <p class="filter-item-description">Design</p>
                             </div>
                         </a>
                     </li>
@@ -119,7 +119,7 @@
                         <a href="" class="link"><img src="./images/portfolio-3-2.jpg" alt="Organic Food" width="360" height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Organic Food</h2>
-                                <p class="filter-list-item-description">Web Site</p>
+                                <p class="filter-item-description">Web Site</p>
                             </div>
                         </a>
                     </li>
@@ -127,7 +127,7 @@
                         <a href="" class="link"><img src="./images/portfolio-3-3.jpg" alt="Fresh Coffee" width="360" height="300">
                             <div class="item-text">
                                 <h2 class="filter-item-heading">Fresh Coffee</h2>
-                                <p class="filter-list-item-description">Web Site</p>
+                                <p class="filter-item-description">Web Site</p>
                             </div>
                         </a>
                     </li>
@@ -137,10 +137,13 @@
     </main>
     <footer class="footer">
         <div class="container footer-box">
-            <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
-            <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing
-                & growth solutions.
-            </p>
+            <div class="footer-info">
+                <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
+                <p class="footer-description">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    & growth solutions.
+                </p>
+            </div>
         </div>
     </footer>
 </body>
