--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="border-line">
         <div class="container header-box">
             <nav class="nav-box">
                 <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
