--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="border-line">
-        <div class="container header-box">
+    <header class="header-box">
+        <div class="container header-content">
             <nav class="nav-box">
                 <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
                 <ul class="list nav-box-list">
