--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container header-box">
             <nav class="nav-box">
                 <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
